--- a/index.html
+++ b/index.html
@@ -55,11 +55,108 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <!-- Seccion 1 (Logo de teatinos e imagenes del colegio) -->
+      <section class="section__intro text-light">
+        <div class="container">
+          <div class="row py-5">
+            <div class="col-sm d-flex align-items-center">
+              <div class="text-center">
+                <h1>Colegio San Cayetano</h1>
+                <h2>Villa Adelina</h2>
+                <img
+                  class="img__teatinos"
+                  src="imgs/TEATINOS.png"
+                  alt="logoteatinos"
+                />
+                <h1>Orden de Clérigos Regulares</h1>
+              </div>
+            </div>
+            <!-- Carrusel de imagenes de BS -->
+            <div class="col-sm">
+              <div
+                id="carouselExampleAutoplaying"
+                class="carousel slide"
+                data-bs-ride="carousel"
+              >
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img
+                      src="imgs/30-1.jpg"
+                      class="d-block w-100 rounded"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="imgs/10.jpg"
+                      class="d-block w-100 rounded"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="imgs/50-1.jpg"
+                      class="d-block w-100 rounded"
+                      alt="..."
+                    />
+                  </div>
+                </div>
+                <button
+                  class="carousel-control-prev"
+                  type="button"
+                  data-bs-target="#carouselExampleAutoplaying"
+                  data-bs-slide="prev"
+                >
+                  <span
+                    class="carousel-control-prev-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button
+                  class="carousel-control-next"
+                  type="button"
+                  data-bs-target="#carouselExampleAutoplaying"
+                  data-bs-slide="next"
+                >
+                  <span
+                    class="carousel-control-next-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Seccion 2 (Foto de lugar de ingreso y frase) -->
+      </section>
+      <hr class="text-light" />
+      <section class="section__frase">
+        <div class="container">
+          <div class="row py-5">
+            <div class="col-sm">
+              <img
+                class="img__ingreso rounded"
+                src="/imgs/Ingreso.jpg"
+                alt=""
+              />
+            </div>
+            <div class="col-sm d-flex align-items-center">
+              <h3 class="text-center text-light">
+                Una de las determinaciones más importantes de una familia es la
+                elección del colegio para la educación de sus hijos.
+              </h3>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <!-- Footer hecho con Grid System de BS -->
     <footer>
       <div class="container">
-        <div class="row">
+        <div class="row pt-4">
           <div class="col-7">
             <a
               class="text-light a__decoration size"
