--- a/pages/niveles.html
+++ b/pages/niveles.html
@@ -52,6 +52,128 @@
         </div>
       </nav>
     </header>
+    <section class="section-niveles py-5">
+      <div class="container">
+        <div class="row">
+          <h1 class="text-uppercase text-center text-light h1__niveles">
+            Niveles
+          </h1>
+        </div>
+        <!-- Tarjeta Nivel Inicial -->
+        <div class="row">
+          <div class="card mb-3 color-card border-light">
+            <img src="../imgs/INICIAL.jpeg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title text-center text-uppercase text-light">
+                Nivel Inicial
+              </h5>
+              <p class="card-text text-center text-light">
+                Jardín San Cayetano Maternal (Sala de 2)
+                <br />
+                <br />
+                Un ambiente seguro donde se reconoce la importancia de los
+                primeros años de vida, brindando oportunidades de juego,
+                exploración y aprendizaje que permitan a los niños adquirir
+                confianza y autonomía y desarrollar sus capacidades. Jardín de
+                Infantes (Salas de 3,4 y 5 años)
+                <br />
+                <br />
+                Ambiente que promueve el aprendizaje constante, potenciando el
+                desarrollo de las capacidades de los niños en el inicio de la
+                trayectoria educativa. Estímulos de Educación Física, Música e
+                Inglés a partir de los 3 años y Educación Digital a partir de
+                sala de 4. Formación Religiosa, Proyecto pastoral. Actividades
+                campamentiles en sala 5. Jornada Extendida (3 a 5 años)
+                <br />
+                <br />
+                El objetivo de los Talleres en modalidad de Jornada Extendida es
+                mantener siempre la capacidad de asombro, estimulando la
+                creatividad y el trabajo con otros en un ambiente seguro y
+                cuidado donde se respeta el tiempo de cada niño.
+                <br />
+                <br />
+                Talleres de Ingles, Arte, Motricidad, Expresión corporal, Teatro
+                y Títeres.
+              </p>
+            </div>
+          </div>
+        </div>
+        <!-- Tarjeta Nivel Primario -->
+        <div class="row">
+          <div class="card mb-3 color-card border-light">
+            <img src="../imgs/PRIMARIA2.jpg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title text-center text-uppercase text-light">
+                Nivel Primario
+              </h5>
+              <p class="card-text text-center text-light">
+                Además del Plan de enseñanza oficial de 1º a 6º año el colegio
+                complementa la educación de los alumnos con un programa de
+                materias extracurriculares en:
+                <br />
+                <br />
+                - Formación Religiosa y apoyo pastoral.
+                <br />
+                <br />
+                - Inglés Intensivo con Proyecto Literario e introducción a
+                Exámenes Internacionales Universidad de Cambridge.
+                <br />
+                <br />
+                - Educación Digital y Robótica con certificación Microsoft
+                (Convenio con UTN).
+                <br />
+                <br />
+                - Participación en Olimpiadas de Matemáticas y Certámenes
+                literarios.
+                <br />
+                <br />
+                - Participación en jornadas de convivencias y viajes de
+                estudios. Programa de salidas educativas de 1ro a 6to año.
+                <br />
+                <br />
+                - Jornada extendida con programas de intensificación en
+                Educación Artística, Educación Física y Educación Musical: Los
+                talleres en Jornada Extendida son OPTATIVOS y ofrecen programas
+                de trabajo en los cinco días de la semana de 12:10 a 16:00 hs
+                ofreciendo también el Servicio de Comedor para el almuerzo.-
+              </p>
+            </div>
+          </div>
+        </div>
+        <!-- Tarjeta Nivel Secundario -->
+        <div class="row">
+          <div class="card mb-3 color-card border-light">
+            <img src="../imgs/SECUNDARIA2.jpg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title text-center text-uppercase text-light">
+                NIVEL SECUNDARIO
+              </h5>
+              <p class="card-text text-center text-light">
+                Plan Oficial de enseñanza Ciclo Básico (1º a 3º año) y Ciclo
+                Superior (4º a 6º año) con las orientaciones “Bachiller en
+                Ciencias Sociales” y “Bachiller en Economía y Administración”.
+                <br />
+                <br />
+                Se imparte instrucción extracurricular con extensión de la
+                jornada escolar en:
+                <br />
+                <br />
+                Formación Religiosa; Inglés Intensivo (preparatorio a exámenes
+                Internacionales Universidad de Cambridge); Tecnología e
+                Informática con certificación Microsoft (Convenio con UTN)br
+                Introducción a Estudios Superiores, proyecto UBA XXI .
+                <br />
+                <br />
+                Participación en Certámenes regionales y nacionales. Olimpíadas
+                de matemática (OMA), Olimpíadas de Literatura e Historia.
+                Certámenes Literarios. -Talleres Deportivos -Tutoría desde 1º a
+                4° año -Orientación vocacionla 5° y 6° años -Apoyo Pastoral
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Footer hecho con Grid System de BS -->
     <footer>
       <div class="container">
