--- a/pages/inscripciones.html
+++ b/pages/inscripciones.html
@@ -52,10 +52,32 @@
         </div>
       </nav>
     </header>
+    <main>
+      <section class="section-inscripciones pt-5 pb-2">
+        <div class="container">
+          <div class="row">
+            <h1 class="text-uppercase text-center text-light h1__inscripciones">
+              Inscripciones
+            </h1>
+          </div>
+        </div>
+        <hr class="text-light" />
+      </section>
+      <section class="section-inscripciones pb-5 pt-2">
+        <h1 class="text-center text-light text-uppercase">
+          Inscripciones ciclo lectivo 2023
+        </h1>
+        <hr class="text-light" />
+        <h2 class="text-center text-light">
+          A partir del 10 de Julio se encuentra disponible la postulación de
+          manera <strong>Presencial</strong>
+        </h2>
+      </section>
+    </main>
     <!-- Footer hecho con Grid System de BS -->
     <footer>
       <div class="container">
-        <div class="row">
+        <div class="row pt-4">
           <div class="col-7">
             <a
               class="text-light a__decoration size"
