--- a/pages/niveles.html
+++ b/pages/niveles.html
@@ -177,7 +177,7 @@
     <!-- Footer hecho con Grid System de BS -->
     <footer>
       <div class="container">
-        <div class="row">
+        <div class="row pt-4">
           <div class="col-7">
             <a
               class="text-light a__decoration size"
