--- a/pages/niveles.html
+++ b/pages/niveles.html
@@ -62,7 +62,7 @@
         <!-- Tarjeta Nivel Inicial -->
         <div class="row">
           <div class="card mb-3 color-card border-light">
-            <img src="../imgs/INICIAL.jpeg" class="card-img-top" alt="..." />
+            <img src="../imgs/INICIAL.jpeg" class="img__niveles" alt="..." />
             <div class="card-body">
               <h5 class="card-title text-center text-uppercase text-light">
                 Nivel Inicial
@@ -101,7 +101,7 @@
         <!-- Tarjeta Nivel Primario -->
         <div class="row">
           <div class="card mb-3 color-card border-light">
-            <img src="../imgs/PRIMARIA2.jpg" class="card-img-top" alt="..." />
+            <img src="../imgs/PRIMARIA2.jpg" class="img__niveles" alt="..." />
             <div class="card-body">
               <h5 class="card-title text-center text-uppercase text-light">
                 Nivel Primario
@@ -143,7 +143,7 @@
         <!-- Tarjeta Nivel Secundario -->
         <div class="row">
           <div class="card mb-3 color-card border-light">
-            <img src="../imgs/SECUNDARIA2.jpg" class="card-img-top" alt="..." />
+            <img src="../imgs/SECUNDARIA2.jpg" class="img__niveles" alt="..." />
             <div class="card-body">
               <h5 class="card-title text-center text-uppercase text-light">
                 NIVEL SECUNDARIO
