--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -52,10 +52,74 @@
         </div>
       </nav>
     </header>
+    <section>
+      <div class="container py-5">
+        <!-- Proyecto de ingles -->
+        <div class="row">
+          <div class="col">
+            <img class="img__project" src="../imgs/ingles.jpg" alt="" />
+          </div>
+          <div class="col">
+            <p class="text-light">
+              INGLÉS INTENSIVO
+              <br />
+              <br />
+              Se trata de un ambicioso proyecto que caracteriza a nuestro
+              colegio por la sólida formación en el idioma inglés con que
+              egresan nuestros alumnos. Las diversas etapas a lo largo del
+              trayecto escolar que comienzan en sala de 3 años de Jardín de
+              Infantes hasta el egreso de la Esc. Secundaria habilitan a los
+              estudiantes para rendir los Exámenes Internacionales de la
+              Universidad de Cambridge.
+            </p>
+          </div>
+        </div>
+        <hr class="text-light" />
+        <!-- Proyecto de digital -->
+        <div class="row pt-3">
+          <div class="col">
+            <img class="img__project" src="../imgs/digital.jpeg" alt="" />
+          </div>
+          <div class="col">
+            <p class="text-light">
+              ED. DIGITAL
+              <br />
+              <br />
+              Nuestro proyecto pretende lograr que los alumnos utilicen las
+              tecnologías de la información y la comunicación para potenciar y
+              facilitar la construcción de saberes, y que se desempeñen con,
+              autonomía, creatividad y responsabilidad
+            </p>
+          </div>
+        </div>
+        <hr class="text-light" />
+        <!-- Proyecto de talleres -->
+        <div class="row pt-3">
+          <div class="col">
+            <img
+              class="img__project"
+              src="../imgs/Talleres-deportivos-1536x1020.jpg"
+              alt=""
+            />
+          </div>
+          <div class="col">
+            <p class="text-light">
+              TALLERES ARTISTICOS Y DEPORTIVOS
+              <br />
+              <br />
+              Participación en Olimpíadas de Matemáticas (OMA), Olimpíadas de
+              Historia, Certámenes Literarios, etc. Talleres de Introducción en
+              Estudios Superiores, Proyecto UBA XXI. CAMPUS (AULA VIRTUAL)
+              JORNADA EXTENDIDA NIVEL INICIAL y PRIMARIO
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Footer hecho con Grid System de BS -->
     <footer>
       <div class="container">
-        <div class="row">
+        <div class="row pt-4">
           <div class="col-7">
             <a
               class="text-light a__decoration size"
