--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="shortcut icon" href="/imgs/ESCUDO-CSC.png" type="image/x-icon" />
     <!-- Mi css -->
     <link rel="stylesheet" href="/css/style.css" />
+    <!-- Icons BS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
+    />
     <!-- CSS BS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
