--- a/pages/niveles.html
+++ b/pages/niveles.html
@@ -5,12 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Colegio San Cayetano - Villa Adelina</title>
     <link rel="shortcut icon" href="/imgs/ESCUDO-CSC.png" type="image/x-icon" />
-    <link rel="stylesheet" href="../css/style.css" />
+    <!-- Mi css -->
+    <link rel="stylesheet" href="/css/style.css" />
+    <!-- Fuente -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Icons BS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
+    />
+    <!-- CSS BS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
+    />
+    <!-- Google font -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap"
+      rel="stylesheet"
     />
   </head>
   <body>
@@ -60,7 +77,7 @@
           </h1>
         </div>
         <!-- Tarjeta Nivel Inicial -->
-        <div class="row">
+        <div class="row mt-5">
           <div class="card mb-3 color-card border-light">
             <img src="../imgs/INICIAL.jpeg" class="img__niveles" alt="..." />
             <div class="card-body">
