--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -5,7 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Colegio San Cayetano - Villa Adelina</title>
     <link rel="shortcut icon" href="/imgs/ESCUDO-CSC.png" type="image/x-icon" />
-    <link rel="stylesheet" href="../css/style.css" />
+    <!-- Mi css -->
+    <link rel="stylesheet" href="/css/style.css" />
+    <!-- Icons BS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
+    />
+    <!-- CSS BS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
