--- a/pages/inscripciones.html
+++ b/pages/inscripciones.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Titulo -->
     <title>Colegio San Cayetano - Villa Adelina</title>
+    <!-- Shortcut icon -->
     <link rel="shortcut icon" href="/imgs/ESCUDO-CSC.png" type="image/x-icon" />
     <!-- Mi css -->
     <link rel="stylesheet" href="/css/style.css" />
@@ -19,8 +21,14 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
+    <!-- Google fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
+    <!-- Header/NavBar hecho con BS -->
     <header>
       <nav class="navbar navbar-expand-lg">
         <div class="container">
@@ -60,17 +68,7 @@
       </nav>
     </header>
     <main>
-      <section class="section-inscripciones pt-5 pb-2">
-        <div class="container">
-          <div class="row">
-            <h1 class="text-uppercase text-center text-light h1__inscripciones">
-              Inscripciones
-            </h1>
-          </div>
-        </div>
-        <hr class="text-light" />
-      </section>
-      <section class="section-inscripciones pb-5 pt-2">
+      <section class="section-inscripciones py-5">
         <h1 class="text-center text-light text-uppercase">
           Inscripciones ciclo lectivo 2023
         </h1>
@@ -79,6 +77,24 @@
           A partir del 10 de Julio se encuentra disponible la postulación de
           manera <strong>Presencial</strong>
         </h2>
+        <h1 class="text-center text-light text-uppercase pt-5 titulo-galeria">
+          Galeria de fotos
+        </h1>
+      </section>
+      <!-- Galeria hecha con grid -->
+      <section class="pb-3 fotos">
+        <img src="https://placeimg.com/960/540/nature" alt="" />
+        <img src="https://placeimg.com/960/540/tech" alt="" />
+        <img src="https://placeimg.com/960/540/people" alt="" />
+        <img src="https://placeimg.com/960/540/animals" alt="" />
+        <img src="https://placeimg.com/960/540/arch" alt="" />
+        <img src="https://placeimg.com/960/540/any" alt="" />
+        <img src="https://placeimg.com/960/540/any" alt="" />
+        <img src="https://placeimg.com/960/540/any" alt="" />
+        <img src="https://placeimg.com/960/540/tech" alt="" />
+        <img src="https://placeimg.com/960/540/arch" alt="" />
+        <img src="https://placeimg.com/960/540/animals" alt="" />
+        <img src="https://placeimg.com/960/540/nature" alt="" />
       </section>
     </main>
     <!-- Footer hecho con Grid System de BS -->
