--- a/pages/niveles.html
+++ b/pages/niveles.html
@@ -3,15 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Titulo -->
     <title>Colegio San Cayetano - Villa Adelina</title>
+    <!-- Shortcut icon -->
     <link rel="shortcut icon" href="/imgs/ESCUDO-CSC.png" type="image/x-icon" />
     <!-- Mi css -->
     <link rel="stylesheet" href="/css/style.css" />
-    <!-- Fuente -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Oswald&display=swap"
-      rel="stylesheet"
-    />
     <!-- Icons BS -->
     <link
       rel="stylesheet"
@@ -24,13 +21,14 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-    <!-- Google font -->
+    <!-- Google fonts -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Oswald&display=swap"
       rel="stylesheet"
     />
   </head>
   <body>
+    <!-- Header/NavBar hecho con BS -->
     <header>
       <nav class="navbar navbar-expand-lg">
         <div class="container">
@@ -71,6 +69,7 @@
     </header>
     <section class="section-niveles py-5">
       <div class="container">
+        <!-- Titulo Niveles -->
         <div class="row">
           <h1 class="text-uppercase text-center text-light h1__niveles">
             Niveles
