--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Titulo -->
     <title>Colegio San Cayetano - Villa Adelina</title>
+    <!-- Shortcut icon -->
     <link rel="shortcut icon" href="/imgs/ESCUDO-CSC.png" type="image/x-icon" />
     <!-- Mi css -->
     <link rel="stylesheet" href="/css/style.css" />
@@ -19,8 +21,14 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
+    <!-- Google fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
+    <!-- Header/NavBar hecho con BS -->
     <header>
       <nav class="navbar navbar-expand-lg">
         <div class="container">
@@ -59,19 +67,26 @@
         </div>
       </nav>
     </header>
-    <section>
+    <section class="py-3">
+      <!-- Formulario de contacto -->
       <div class="container pb-5">
         <form class="row g-3">
           <div class="col-md-6">
-            <label for="inputEmail4" class="form-label">Correo</label>
+            <label for="inputEmail4" class="form-label text-light"
+              >Correo</label
+            >
             <input type="email" class="form-control" id="inputEmail4" />
           </div>
           <div class="col-md-6">
-            <label for="inputPassword4" class="form-label">Contraseña</label>
+            <label for="inputPassword4" class="form-label text-light"
+              >Contraseña</label
+            >
             <input type="password" class="form-control" id="inputPassword4" />
           </div>
           <div class="col-12">
-            <label for="inputAddress" class="form-label">Direccion</label>
+            <label for="inputAddress" class="form-label text-light"
+              >Direccion</label
+            >
             <input
               type="text"
               class="form-control"
@@ -80,7 +95,9 @@
             />
           </div>
           <div class="col-12">
-            <label for="inputAddress2" class="form-label">Direccion 2</label>
+            <label for="inputAddress2" class="form-label text-light"
+              >Direccion 2</label
+            >
             <input
               type="text"
               class="form-control"
@@ -89,24 +106,26 @@
             />
           </div>
           <div class="col-md-6">
-            <label for="inputCity" class="form-label">Ciudad</label>
+            <label for="inputCity" class="form-label text-light">Ciudad</label>
             <input type="text" class="form-control" id="inputCity" />
           </div>
           <div class="col-md-4">
-            <label for="inputState" class="form-label">Estado</label>
+            <label for="inputState" class="form-label text-light">Estado</label>
             <select id="inputState" class="form-select">
               <option selected>Choose...</option>
               <option>...</option>
             </select>
           </div>
           <div class="col-md-2">
-            <label for="inputZip" class="form-label">Codigo Postal</label>
+            <label for="inputZip" class="form-label text-light"
+              >Codigo Postal</label
+            >
             <input type="text" class="form-control" id="inputZip" />
           </div>
           <div class="col-12">
             <div class="form-check">
               <input class="form-check-input" type="checkbox" id="gridCheck" />
-              <label class="form-check-label" for="gridCheck">
+              <label class="form-check-label text-light" for="gridCheck">
                 Hecha un vistazo
               </label>
             </div>
@@ -120,7 +139,7 @@
     <!-- Footer hecho con Grid System de BS -->
     <footer>
       <div class="container">
-        <div class="row">
+        <div class="row pt-4">
           <div class="col-7">
             <a
               class="text-light a__decoration size"
