--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <!-- Titulo -->
     <title>Colegio San Cayetano - Villa Adelina</title>
     <!-- Shortcut Icon -->
-    <link rel="shortcut icon" href="/imgs/ESCUDO-CSC.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="imgs/ESCUDO-CSC.png" type="image/x-icon" />
     <!-- Mi css -->
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <!-- Icons BS -->
     <link
       rel="stylesheet"
@@ -33,7 +33,7 @@
       <nav class="navbar navbar-expand-lg">
         <div class="container">
           <a class="navbar-brand" href="index.html"
-            ><img src="/imgs/ESCUDO-CSC.png" alt="Escudo Colegio San Cayetano"
+            ><img src="imgs/ESCUDO-CSC.png" alt="Escudo Colegio San Cayetano"
           /></a>
           <button
             class="navbar-toggler"
@@ -49,18 +49,18 @@
                 <a class="nav-link" href="index.html">Inicio</a>
               </li>
               <li class="nav-item ms-2">
-                <a class="nav-link" href="/pages/niveles.html">Niveles</a>
+                <a class="nav-link" href="pages/niveles.html">Niveles</a>
               </li>
               <li class="nav-item ms-2">
-                <a class="nav-link" href="/pages/inscripciones.html"
+                <a class="nav-link" href="pages/inscripciones.html"
                   >Inscripciones</a
                 >
               </li>
               <li class="nav-item ms-2">
-                <a class="nav-link" href="/pages/proyectos.html">Proyectos</a>
+                <a class="nav-link" href="pages/proyectos.html">Proyectos</a>
               </li>
               <li class="nav-item ms-2">
-                <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+                <a class="nav-link" href="pages/contacto.html">Contacto</a>
               </li>
             </ul>
           </div>
@@ -172,7 +172,7 @@
           <div class="col-7">
             <a
               class="text-light a__decoration size"
-              href="/pages/inscripciones.html"
+              href="pages/inscripciones.html"
               >Inscribirse a Colegio San Cayetano</a
             >
           </div>
