--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -27,7 +27,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="proyectos">
     <header>
       <nav class="navbar navbar-expand-lg">
         <div class="container">
