--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="index">
     <!-- Header/NavBar hecho con BS -->
     <header>
       <nav class="navbar navbar-expand-lg">
