--- a/pages/inscripciones.html
+++ b/pages/inscripciones.html
@@ -27,7 +27,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="inscripciones">
     <!-- Header/NavBar hecho con BS -->
     <header>
       <nav class="navbar navbar-expand-lg">
