--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -67,7 +67,7 @@
         </div>
       </nav>
     </header>
-    <section class="py-3">
+    <section class="py-3 formulario">
       <!-- Formulario de contacto -->
       <div class="container pb-5">
         <form class="row g-3">
