--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="keywords"
+      content="Colegio, Villa Adelina, San Cayetano, Nivel Inicial, Nivel Primario, Nivel Secundario"
+    />
+    <meta
+      name="description"
+      content="Colegio San Cayetano Ubicado en Villa Adelina, Municpio de San Isidro, Cuenta con un nivel de educación muy bien calificado, en sus tres niveles, Inicial, Primario , Secundario"
+    />
     <!-- Titulo -->
     <title>Colegio San Cayetano - Villa Adelina</title>
     <!-- Shortcut Icon -->
@@ -85,7 +93,7 @@
               </div>
             </div>
             <!-- Carrusel de imagenes de BS -->
-            <div class="col-sm">
+            <div class="col-sm carrusel">
               <div
                 id="carouselExampleAutoplaying"
                 class="carousel slide"
@@ -96,21 +104,21 @@
                     <img
                       src="imgs/30-1.jpg"
                       class="d-block w-100 rounded"
-                      alt="..."
+                      alt="imagen teatinos"
                     />
                   </div>
                   <div class="carousel-item">
                     <img
                       src="imgs/10.jpg"
                       class="d-block w-100 rounded"
-                      alt="..."
+                      alt="patio del colegio"
                     />
                   </div>
                   <div class="carousel-item">
                     <img
                       src="imgs/50-1.jpg"
                       class="d-block w-100 rounded"
-                      alt="..."
+                      alt="obra de ingles"
                     />
                   </div>
                 </div>
@@ -151,11 +159,11 @@
             <div class="col-sm">
               <img
                 class="img__ingreso rounded"
-                src="/imgs/Ingreso.jpg"
-                alt=""
+                src="imgs/Ingreso.jpg"
+                alt="Foto de la recepcion del colegio"
               />
             </div>
-            <div class="col-sm d-flex align-items-center">
+            <div class="col-sm d-flex align-items-center frase__educacion">
               <h3 class="text-center text-light">
                 Una de las determinaciones más importantes de una familia es la
                 elección del colegio para la educación de sus hijos.
