--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="keywords"
+      content="Colegio, Villa Adelina, San Cayetano, Nivel Inicial, Nivel Primario, Nivel Secundario"
+    />
+    <meta
+      name="description"
+      content="Colegio San Cayetano Ubicado en Villa Adelina, Municpio de San Isidro, Cuenta con un nivel de educación muy bien calificado, en sus tres niveles, Inicial, Primario , Secundario"
+    />
     <!-- Titulo -->
-    <title>Colegio San Cayetano - Villa Adelina</title>
+    <title>Colegio San Cayetano - Contacto</title>
     <!-- Shortcut icon -->
     <link rel="shortcut icon" href="/imgs/ESCUDO-CSC.png" type="image/x-icon" />
     <!-- Mi css -->
@@ -112,8 +120,8 @@
           <div class="col-md-4">
             <label for="inputState" class="form-label text-light">Estado</label>
             <select id="inputState" class="form-select">
-              <option selected>Choose...</option>
-              <option>...</option>
+              <option selected>Villa Adelina</option>
+              <option>Boulougne</option>
             </select>
           </div>
           <div class="col-md-2">
