--- a/pages/inscripciones.html
+++ b/pages/inscripciones.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="keywords"
+      content="Colegio, Villa Adelina, San Cayetano, Nivel Inicial, Nivel Primario, Nivel Secundario"
+    />
+    <meta
+      name="description"
+      content="Colegio San Cayetano Ubicado en Villa Adelina, Municpio de San Isidro, Cuenta con un nivel de educación muy bien calificado, en sus tres niveles, Inicial, Primario , Secundario"
+    />
     <!-- Titulo -->
-    <title>Colegio San Cayetano - Villa Adelina</title>
+    <title>Colegio San Cayetano - Inscripciones</title>
     <!-- Shortcut icon -->
     <link rel="shortcut icon" href="/imgs/ESCUDO-CSC.png" type="image/x-icon" />
     <!-- Mi css -->
@@ -77,24 +85,25 @@
           A partir del 10 de Julio se encuentra disponible la postulación de
           manera <strong>Presencial</strong>
         </h2>
+        <!-- Titulo Animado -->
         <h1 class="text-center text-light text-uppercase pt-5 titulo-galeria">
           Galeria de fotos
         </h1>
       </section>
       <!-- Galeria hecha con grid -->
       <section class="pb-3 fotos">
-        <img src="https://placeimg.com/960/540/nature" alt="" />
-        <img src="https://placeimg.com/960/540/tech" alt="" />
-        <img src="https://placeimg.com/960/540/people" alt="" />
-        <img src="https://placeimg.com/960/540/animals" alt="" />
-        <img src="https://placeimg.com/960/540/arch" alt="" />
-        <img src="https://placeimg.com/960/540/any" alt="" />
-        <img src="https://placeimg.com/960/540/any" alt="" />
-        <img src="https://placeimg.com/960/540/any" alt="" />
-        <img src="https://placeimg.com/960/540/tech" alt="" />
-        <img src="https://placeimg.com/960/540/arch" alt="" />
-        <img src="https://placeimg.com/960/540/animals" alt="" />
-        <img src="https://placeimg.com/960/540/nature" alt="" />
+        <img src="https://placeimg.com/960/540/nature" alt="Foto random" />
+        <img src="https://placeimg.com/960/540/tech" alt="Foto random" />
+        <img src="https://placeimg.com/960/540/people" alt="Foto random" />
+        <img src="https://placeimg.com/960/540/animals" alt="Foto random" />
+        <img src="https://placeimg.com/960/540/arch" alt="Foto random" />
+        <img src="https://placeimg.com/960/540/any" alt="Foto random" />
+        <img src="https://placeimg.com/960/540/any" alt="Foto random" />
+        <img src="https://placeimg.com/960/540/any" alt="Foto random" />
+        <img src="https://placeimg.com/960/540/tech" alt="Foto random" />
+        <img src="https://placeimg.com/960/540/arch" alt="Foto random" />
+        <img src="https://placeimg.com/960/540/animals" alt="Foto random" />
+        <img src="https://placeimg.com/960/540/nature" alt="Foto random" />
       </section>
     </main>
     <!-- Footer hecho con Grid System de BS -->
