--- a/pages/niveles.html
+++ b/pages/niveles.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="keywords"
+      content="Colegio, Villa Adelina, San Cayetano, Nivel Inicial, Nivel Primario, Nivel Secundario"
+    />
+    <meta
+      name="description"
+      content="Colegio San Cayetano Ubicado en Villa Adelina, Municpio de San Isidro, Cuenta con un nivel de educación muy bien calificado, en sus tres niveles, Inicial, Primario , Secundario"
+    />
     <!-- Titulo -->
-    <title>Colegio San Cayetano - Villa Adelina</title>
+    <title>Colegio San Cayetano - Niveles</title>
     <!-- Shortcut icon -->
     <link rel="shortcut icon" href="/imgs/ESCUDO-CSC.png" type="image/x-icon" />
     <!-- Mi css -->
@@ -78,7 +86,11 @@
         <!-- Tarjeta Nivel Inicial -->
         <div class="row mt-5">
           <div class="card mb-3 color-card border-light">
-            <img src="../imgs/INICIAL.jpeg" class="img__niveles" alt="..." />
+            <img
+              src="../imgs/INICIAL.jpeg"
+              class="img__niveles"
+              alt="Foto nivel inicial"
+            />
             <div class="card-body">
               <h5 class="card-title text-center text-uppercase text-light">
                 Nivel Inicial
@@ -117,7 +129,11 @@
         <!-- Tarjeta Nivel Primario -->
         <div class="row">
           <div class="card mb-3 color-card border-light">
-            <img src="../imgs/PRIMARIA2.jpg" class="img__niveles" alt="..." />
+            <img
+              src="../imgs/PRIMARIA2.jpg"
+              class="img__niveles"
+              alt="Foto de nivel primario"
+            />
             <div class="card-body">
               <h5 class="card-title text-center text-uppercase text-light">
                 Nivel Primario
@@ -159,7 +175,11 @@
         <!-- Tarjeta Nivel Secundario -->
         <div class="row">
           <div class="card mb-3 color-card border-light">
-            <img src="../imgs/SECUNDARIA2.jpg" class="img__niveles" alt="..." />
+            <img
+              src="../imgs/SECUNDARIA2.jpg"
+              class="img__niveles"
+              alt="Foto de nivel secundario"
+            />
             <div class="card-body">
               <h5 class="card-title text-center text-uppercase text-light">
                 NIVEL SECUNDARIO
