--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="keywords"
+      content="Colegio, Villa Adelina, San Cayetano, Nivel Inicial, Nivel Primario, Nivel Secundario"
+    />
+    <meta
+      name="description"
+      content="Colegio San Cayetano Ubicado en Villa Adelina, Municpio de San Isidro, Cuenta con un nivel de educación muy bien calificado, en sus tres niveles, Inicial, Primario , Secundario"
+    />
     <!-- Titulo -->
-    <title>Colegio San Cayetano - Villa Adelina</title>
+    <title>Colegio San Cayetano - Proyectos</title>
     <!-- Shortcut icon -->
     <link rel="shortcut icon" href="/imgs/ESCUDO-CSC.png" type="image/x-icon" />
     <!-- Mi css -->
@@ -71,7 +79,7 @@
         <!-- Proyecto de ingles -->
         <div class="row">
           <div class="col">
-            <img class="img__project" src="../imgs/ingles.jpg" alt="" />
+            <img class="img__project" src="../imgs/ingles.jpg" alt="ingles" />
           </div>
           <div class="col">
             <p class="text-light">
@@ -92,7 +100,11 @@
         <!-- Proyecto de digital -->
         <div class="row pt-3">
           <div class="col">
-            <img class="img__project" src="../imgs/digital.jpeg" alt="" />
+            <img
+              class="img__project"
+              src="../imgs/digital.jpeg"
+              alt="eduacion digital"
+            />
           </div>
           <div class="col">
             <p class="text-light">
@@ -113,7 +125,7 @@
             <img
               class="img__project"
               src="../imgs/Talleres-deportivos-1536x1020.jpg"
-              alt=""
+              alt="Talleres deportivos"
             />
           </div>
           <div class="col">
