--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <section class="section__intro text-light">
         <div class="container">
           <div class="row py-5">
-            <div class="col-sm d-flex align-items-center">
+            <div class="col-sm-12 col-md-12 col-lg-6 text-center">
               <div class="text-center">
                 <h1>Colegio San Cayetano</h1>
                 <h2>Villa Adelina</h2>
@@ -93,7 +93,7 @@
               </div>
             </div>
             <!-- Carrusel de imagenes de BS -->
-            <div class="col-sm carrusel">
+            <div class="col-sm-12 col-md-12 col-lg-6 carrusel">
               <div
                 id="carouselExampleAutoplaying"
                 class="carousel slide"
@@ -156,15 +156,15 @@
       <section class="section__frase">
         <div class="container">
           <div class="row py-5">
-            <div class="col-sm">
+            <div class="col-sm-12 col-lg-6">
               <img
                 class="img__ingreso rounded"
                 src="imgs/Ingreso.jpg"
                 alt="Foto de la recepcion del colegio"
               />
             </div>
-            <div class="col-sm d-flex align-items-center frase__educacion">
-              <h3 class="text-center text-light">
+            <div class="col-sm-12 col-lg-6 d-flex align-items-center">
+              <h3 class="text-center text-light frase__educacion">
                 Una de las determinaciones más importantes de una familia es la
                 elección del colegio para la educación de sus hijos.
               </h3>
