--- a/pages/inscripciones.html
+++ b/pages/inscripciones.html
@@ -86,24 +86,9 @@
           manera <strong>Presencial</strong>
         </h2>
         <!-- Titulo Animado -->
-        <h1 class="text-center text-light text-uppercase pt-5 titulo-galeria">
-          Galeria de fotos
+        <h1 class="text-center text-light text-uppercase pt-5 aviso">
+          Te esperamos
         </h1>
-      </section>
-      <!-- Galeria hecha con grid -->
-      <section class="pb-3 fotos">
-        <img src="https://placeimg.com/960/540/nature" alt="Foto random" />
-        <img src="https://placeimg.com/960/540/tech" alt="Foto random" />
-        <img src="https://placeimg.com/960/540/people" alt="Foto random" />
-        <img src="https://placeimg.com/960/540/animals" alt="Foto random" />
-        <img src="https://placeimg.com/960/540/arch" alt="Foto random" />
-        <img src="https://placeimg.com/960/540/any" alt="Foto random" />
-        <img src="https://placeimg.com/960/540/any" alt="Foto random" />
-        <img src="https://placeimg.com/960/540/any" alt="Foto random" />
-        <img src="https://placeimg.com/960/540/tech" alt="Foto random" />
-        <img src="https://placeimg.com/960/540/arch" alt="Foto random" />
-        <img src="https://placeimg.com/960/540/animals" alt="Foto random" />
-        <img src="https://placeimg.com/960/540/nature" alt="Foto random" />
       </section>
     </main>
     <!-- Footer hecho con Grid System de BS -->
