--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -78,10 +78,10 @@
       <div class="container py-5">
         <!-- Proyecto de ingles -->
         <div class="row">
-          <div class="col">
+          <div class="col-sm-12 col-md-12 col-lg-6 project">
             <img class="img__project" src="../imgs/ingles.jpg" alt="ingles" />
           </div>
-          <div class="col">
+          <div class="col-sm-12 col-md-12 col-lg-6 project__info">
             <p class="text-light">
               INGLÉS INTENSIVO
               <br />
@@ -99,14 +99,14 @@
         <hr class="text-light" />
         <!-- Proyecto de digital -->
         <div class="row pt-3">
-          <div class="col">
+          <div class="col-sm-12 col-md-12 col-lg-6 project">
             <img
               class="img__project"
               src="../imgs/digital.jpeg"
               alt="eduacion digital"
             />
           </div>
-          <div class="col">
+          <div class="col-sm-12 col-md-12 col-lg-6 project__info">
             <p class="text-light">
               ED. DIGITAL
               <br />
@@ -121,14 +121,14 @@
         <hr class="text-light" />
         <!-- Proyecto de talleres -->
         <div class="row pt-3">
-          <div class="col">
+          <div class="col-sm-12 col-md-12 col-lg-6 project">
             <img
               class="img__project"
               src="../imgs/Talleres-deportivos-1536x1020.jpg"
               alt="Talleres deportivos"
             />
           </div>
-          <div class="col">
+          <div class="col-sm-12 col-md-12 col-lg-6 project__info">
             <p class="text-light">
               TALLERES ARTISTICOS Y DEPORTIVOS
               <br />
