--- a/pages/inscripciones.html
+++ b/pages/inscripciones.html
@@ -14,9 +14,13 @@
     <!-- Titulo -->
     <title>Colegio San Cayetano - Inscripciones</title>
     <!-- Shortcut icon -->
-    <link rel="shortcut icon" href="imgs/ESCUDO-CSC.png" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="../imgs/ESCUDO-CSC.png"
+      type="image/x-icon"
+    />
     <!-- Mi css -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <!-- Icons BS -->
     <link
       rel="stylesheet"
@@ -40,7 +44,7 @@
     <header>
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="index.html"
+          <a class="navbar-brand" href="../index.html"
             ><img
               src="../imgs/ESCUDO-CSC.png"
               alt="Escudo Colegio San Cayetano"
@@ -56,7 +60,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item ms-2">
-                <a class="nav-link" href="index.html">Inicio</a>
+                <a class="nav-link" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item ms-2">
                 <a class="nav-link" href="niveles.html">Niveles</a>
@@ -96,9 +100,7 @@
       <div class="container">
         <div class="row pt-4">
           <div class="col-7">
-            <a
-              class="text-light a__decoration size"
-              href="pages/inscripciones.html"
+            <a class="text-light a__decoration size" href="inscripciones.html"
               >Inscribirse a Colegio San Cayetano</a
             >
           </div>
