--- a/pages/niveles.html
+++ b/pages/niveles.html
@@ -14,9 +14,13 @@
     <!-- Titulo -->
     <title>Colegio San Cayetano - Niveles</title>
     <!-- Shortcut icon -->
-    <link rel="shortcut icon" href="imgs/ESCUDO-CSC.png" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="../imgs/ESCUDO-CSC.png"
+      type="image/x-icon"
+    />
     <!-- Mi css -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <!-- Icons BS -->
     <link
       rel="stylesheet"
@@ -40,7 +44,7 @@
     <header>
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="index.html"
+          <a class="navbar-brand" href="../index.html"
             ><img
               src="../imgs/ESCUDO-CSC.png"
               alt="Escudo Colegio San Cayetano"
@@ -56,7 +60,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item ms-2">
-                <a class="nav-link" href="index.html">Inicio</a>
+                <a class="nav-link" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item ms-2">
                 <a class="nav-link" href="niveles.html">Niveles</a>
@@ -87,7 +91,7 @@
         <div class="row mt-5">
           <div class="card mb-3 color-card border-light">
             <img
-              src="imgs/INICIAL.jpeg"
+              src="../imgs/INICIAL.jpeg"
               class="img__niveles"
               alt="Foto nivel inicial"
             />
@@ -130,7 +134,7 @@
         <div class="row">
           <div class="card mb-3 color-card border-light">
             <img
-              src="imgs/PRIMARIA2.jpg"
+              src="../imgs/PRIMARIA2.jpg"
               class="img__niveles"
               alt="Foto de nivel primario"
             />
@@ -176,7 +180,7 @@
         <div class="row">
           <div class="card mb-3 color-card border-light">
             <img
-              src="imgs/SECUNDARIA2.jpg"
+              src="../imgs/SECUNDARIA2.jpg"
               class="img__niveles"
               alt="Foto de nivel secundario"
             />
@@ -215,9 +219,7 @@
       <div class="container">
         <div class="row pt-4">
           <div class="col-7">
-            <a
-              class="text-light a__decoration size"
-              href="pages/inscripciones.html"
+            <a class="text-light a__decoration size" href="inscripciones.html"
               >Inscribirse a Colegio San Cayetano</a
             >
           </div>
