--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -14,9 +14,13 @@
     <!-- Titulo -->
     <title>Colegio San Cayetano - Proyectos</title>
     <!-- Shortcut icon -->
-    <link rel="shortcut icon" href="imgs/ESCUDO-CSC.png" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="../imgs/ESCUDO-CSC.png"
+      type="image/x-icon"
+    />
     <!-- Mi css -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <!-- Icons BS -->
     <link
       rel="stylesheet"
@@ -39,7 +43,7 @@
     <header>
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="index.html"
+          <a class="navbar-brand" href="../index.html"
             ><img
               src="../imgs/ESCUDO-CSC.png"
               alt="Escudo Colegio San Cayetano"
@@ -55,7 +59,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item ms-2">
-                <a class="nav-link" href="index.html">Inicio</a>
+                <a class="nav-link" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item ms-2">
                 <a class="nav-link" href="niveles.html">Niveles</a>
@@ -79,7 +83,7 @@
         <!-- Proyecto de ingles -->
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-6 project">
-            <img class="img__project" src="imgs/ingles.jpg" alt="ingles" />
+            <img class="img__project" src="../imgs/ingles.jpg" alt="ingles" />
           </div>
           <div class="col-sm-12 col-md-12 col-lg-6 project__info">
             <p class="text-light">
@@ -102,7 +106,7 @@
           <div class="col-sm-12 col-md-12 col-lg-6 project">
             <img
               class="img__project"
-              src="imgs/digital.jpeg"
+              src="../imgs/digital.jpeg"
               alt="eduacion digital"
             />
           </div>
@@ -124,7 +128,7 @@
           <div class="col-sm-12 col-md-12 col-lg-6 project">
             <img
               class="img__project"
-              src="imgs/Talleres-deportivos-1536x1020.jpg"
+              src="../imgs/Talleres-deportivos-1536x1020.jpg"
               alt="Talleres deportivos"
             />
           </div>
@@ -147,9 +151,7 @@
       <div class="container">
         <div class="row pt-4">
           <div class="col-7">
-            <a
-              class="text-light a__decoration size"
-              href="pages/inscripciones.html"
+            <a class="text-light a__decoration size" href="inscripciones.html"
               >Inscribirse a Colegio San Cayetano</a
             >
           </div>
