--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <a class="nav-link" href="index.html">Inicio</a>
               </li>
               <li class="nav-item ms-2">
-                <a class="nav-link" href="/pages/niveles.html">Niveles</a>
+                <a class="nav-link" href="pages/niveles.html">Niveles</a>
               </li>
               <li class="nav-item ms-2">
                 <a class="nav-link" href="pages/inscripciones.html"
